# SelfFork

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  selffork.yaml
.Jules/: palette.md
.github/workflows/: ci.yml  codexbar-watch.yml  e2e.yml
apps/: README.md
apps/web/: DESIGN.md  index.html  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
apps/web/.Jules/: palette.md
apps/web/__tests__/chat/: BranchPicker.test.tsx  DoneSentinel.test.tsx
apps/web/__tests__/cockpit/settings/: vision-page.test.tsx
apps/web/__tests__/context/: NoteList.test.tsx  TierSection.test.tsx
apps/web/__tests__/mission/: KanbanBoard.test.tsx
apps/web/__tests__/run/: event-categories.test.ts  trace-builder.test.ts  waterfall-builder.test.ts
apps/web/__tests__/store/: cockpit-store.test.ts  fleet-providers-body-slice.test.ts
apps/web/__tests__/ws/: multiplex.test.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/cockpit/: layout.tsx  page.tsx
apps/web/app/cockpit/body/: page.tsx
apps/web/app/cockpit/components/chat/: BranchPicker.tsx  ChatTab.tsx  DoneSentinel.tsx  MessageBubble.tsx  MessageInput.tsx  MessageList.tsx
apps/web/app/cockpit/components/context/: ContextTab.tsx  NoteList.tsx  RecallQueryBar.tsx  TierSection.tsx
apps/web/app/cockpit/components/mission/: HandoffLane.tsx  KanbanBoard.tsx  MissionTab.tsx  ProjectSelector.tsx  SessionDrawer.tsx  SwimlaneToggle.tsx
apps/web/app/cockpit/components/run/: AuditStream.tsx  EventRow.tsx  FilterChips.tsx  ParadigmToggle.tsx  RunTab.tsx  TraceTree.tsx  Waterfall.tsx
apps/web/app/cockpit/fleet/: page.tsx
apps/web/app/cockpit/providers/: page.tsx
apps/web/app/cockpit/settings/vision/: page.tsx
apps/web/app/connections/: page.tsx
apps/web/app/project/: page.tsx
apps/web/app/projects/: page.tsx
apps/web/app/projects/new/: page.tsx
apps/web/app/run/: page.tsx
apps/web/app/session/: page.tsx
apps/web/app/settings/: page.tsx
apps/web/app/talk/: page.tsx
apps/web/app/workspaces/: page.tsx
apps/web/app/workspaces/[slug]/: page.tsx  workspace-client.tsx
apps/web/components/: card-detail-panel.tsx  command-palette.tsx  empty-state.tsx  empty.tsx  error-state.tsx  format.tsx  keyboard-shortcuts-overlay.tsx  kpi-card.tsx  provider-usage-strip.tsx  providers.tsx  status-badge.tsx  status-dot.tsx  status-pill.tsx
apps/web/components/dashboard/: activity-feed-item.tsx  live-loop-status.tsx  project-card.tsx  quota-gauge-card.tsx
apps/web/components/layout/: app-shell.tsx  sidebar-context.tsx  sidebar.tsx  topbar.tsx
apps/web/components/talk/: ChatMessage.tsx  talk-stream-subscription.tsx
apps/web/components/topbar/: help-overlay.tsx  pending-sheet.tsx  system-status.tsx
apps/web/components/ui/: alert-dialog.tsx  alert.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  select.tsx  sheet.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
apps/web/components/workspace/: add-kanban-card-dialog.tsx  cli-switch-dialog.tsx  edit-project-dialog.tsx  kanban-board.tsx  live-run-theater.tsx  pending-confirmation-banner.tsx  project-notes.tsx  session-transcript-drawer.tsx  workspace-header.tsx
apps/web/lib/: api.ts  query.ts  utils.ts
apps/web/lib/queries/: mission-queries.ts
apps/web/lib/run/: event-categories.ts  trace-builder.ts  waterfall-builder.ts
apps/web/lib/store/: body-slice.ts  chat-slice.ts  context-slice.ts  fleet-slice.ts  index.ts  mission-slice.ts  providers-slice.ts  run-slice.ts
apps/web/lib/ws/: multiplex.ts  types.ts
apps/web/src/: App.css  App.tsx  index.css
benchmarks/m5_vision_eval/: README.md  conftest.py  index.jsonl  run_eval.py  synth.py  test_run_eval.py  validate_dataset.py
benchmarks/m5_vision_eval/tasks/sample_001_placeholder/: expected_action.json  goal.txt
claude-data-recovery/: README.md
claude-data-recovery/outputs/: README.md
claude-data-recovery/tool/: README.md  copyx.go  discover.go  go.mod  main.go  manifest.go  platform_other.go  platform_windows.go  preflight.go  progress.go  secrets.go
docs/: Operator_Locked_Decisions.md  PRD.md  ROADMAP.md
docs/archive/: Yamac_Jr_Nano_Kararlar.md
docs/archive/superseded/: ADR-004_M4_Cockpit.md
docs/decisions/: ADR-001_MVP_v0.md  ADR-002_Mind_Architecture.md  ADR-003_M3_CLI_Surfing.md  ADR-004_M4_Cockpit.md  ADR-005_M5_Body.md  ADR-006_v2_Pivot.md  ADR-007_v3_Wiring_Completion.md  ADR-008_Autonomy_Heartbeat.md  ADR-009_DualPool_Memory_Scoping.md  ADR-010_Vision_Lock.md  ADR-011_Inference_Resilience.md  ADR-012_S-Train_Corpus.md  Yamac_Jr_Nano_UI_Orchestration_Vision.md
docs/demos/2026-05-26-s-vision-close/: README.md
docs/plans/: M4_Cockpit_Plan.md  M5_Body_Plan.md  M5_Smoke_Checklist.md  M6_Smoke_Checklist.md  M6_v2_Pivot_Plan.md  S-Train_Corpus_Authoring.md  S-Train_Plan.md  S-Train_Smoke_Checklist.md
docs/research/: M5_korpus.md
docs/screenshots/: README.md
infra/deploy/: .env.example  Dockerfile  README.md  docker-compose.yaml
infra/deploy/codexbar/: manifest.toml
infra/deploy/scripts/: install-codexbar.sh  refresh-codexbar-checksums.sh
infra/docker/opencode-runtime/: Dockerfile  README.md
infra/install/: m5_deploy_prereqs.sh
infra/install/macos/: install-daemon-macos.sh
infra/install/ubuntu/: install-daemon-ubuntu.sh
infra/install/windows/: install-daemon-windows.ps1
infra/scripts/: clone_starred.py
infra/tailscale/: acl.json
temp_env/: main.py  pyproject.toml
tests/e2e/: test_selffork_run_smoke.py  test_smoke_placeholder.py  test_workspace_imports.py
